iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Oct  4 00:43:34 2025
*raw
:PREROUTING ACCEPT [187677:268063161]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-e361377b0667 -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-e361377b0667 -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-e361377b0667 -j DROP
-A PREROUTING -d 172.18.0.5/32 ! -i br-e361377b0667 -j DROP
COMMIT
# Completed on Sat Oct  4 00:43:34 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Oct  4 00:43:34 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.5/32 ! -i br-e361377b0667 -o br-e361377b0667 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i br-e361377b0667 -o br-e361377b0667 -p tcp -m tcp --dport 5678 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-e361377b0667 -o br-e361377b0667 -p tcp -m tcp --dport 6379 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-e361377b0667 -o br-e361377b0667 -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-e361377b0667 -o br-e361377b0667 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-e361377b0667 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-e361377b0667 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-e361377b0667 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-e361377b0667 ! -o br-e361377b0667 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o br-e361377b0667 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
COMMIT
# Completed on Sat Oct  4 00:43:34 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Oct  4 00:43:34 2025
*nat
:PREROUTING ACCEPT [10302:609364]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [32553:2473785]
:POSTROUTING ACCEPT [33730:2536908]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-e361377b0667 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i br-e361377b0667 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-e361377b0667 -p tcp -m tcp --dport 5432 -j DNAT --to-destination 172.18.0.2:5432
-A DOCKER ! -i br-e361377b0667 -p tcp -m tcp --dport 6379 -j DNAT --to-destination 172.18.0.3:6379
-A DOCKER ! -i br-e361377b0667 -p tcp -m tcp --dport 5678 -j DNAT --to-destination 172.18.0.4:5678
-A DOCKER ! -i br-e361377b0667 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.18.0.5:8080
COMMIT
# Completed on Sat Oct  4 00:43:34 2025
